--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
+        "symfony/twig-bundle": "6.2.*",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^3.5",
-        "twig/string-extra": "^3.5"
+        "twig/string-extra": "^3.5",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
